# prueba

entity_spawner/: CMakeLists.txt  README.md  package.xml
entity_spawner/src/: entity_spawner_node.cpp
entity_spawner/srv/: LoadEntity.srv  RemoveEntity.srv  SpawnEntity.srv
gui/: CMakeLists.txt  README.md  package.xml  setup.py
gui/gui/: main.py
xarm_ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
xarm_ros2/install/mbot_demo/share/mbot_demo/: local_setup.sh  package.sh
xarm_ros2/install/realsense_gazebo_plugin/share/realsense_gazebo_plugin/: local_setup.sh  package.sh
xarm_ros2/install/uf_ros_lib/share/uf_ros_lib/: package.sh
xarm_ros2/install/xarm_api/share/xarm_api/: package.bash  package.zsh
xarm_ros2/install/xarm_description/share/xarm_description/: local_setup.sh  package.sh
xarm_ros2/install/xarm_description/share/xarm_description/urdf/: xarm_device.urdf.xacro
xarm_ros2/install/xarm_description/share/xarm_description/urdf/camera/: camera.gazebo.xacro
xarm_ros2/install/xarm_description/share/xarm_description/urdf/xarm6/: xarm6.urdf  (+1 more)
xarm_ros2/install/xarm_msgs/share/xarm_msgs/: local_setup.sh  package.sh
xarm_ros2/install/xarm_sdk/share/xarm_sdk/: local_setup.sh  package.sh
xarm_ros2/log/: latest_build
xarm_ros2/xarm_description/urdf/: xarm_device_macro.xacro
xarm_ros2/xarm_description/urdf/xarm6/: xarm6_robot_macro.xacro
xarm_ros2/xarm_gazebo/launch/: _robot_beside_table_gz.launch.py
xarm_ros2/xarm_gazebo/worlds/: table.world
xarm_ros2/xarm_moveit_config/launch/: _dual_robot_moveit_gz.launch.py  _robot_moveit_gz.launch.py
xarm_ros2/xarm_moveit_config/rviz/: moveit.rviz
xarm_ros2/xarm_moveit_config/srdf/: _xarm6_macro.srdf.xacro
xarm_ros2/xarm_moveit_servo/: package.xml
xarm_ros2/xarm_moveit_servo/launch/: _robot_moveit_servo.launch.py  _robot_moveit_servo_fake.launch.py
xarm_ros2/xarm_moveit_servo/src/: xarm_joystick_input.cpp
xarm_simple/uf_ros_lib/uf_ros_lib/: moveit_configs_builder.py
xarm_simple/xarm_description/urdf/common/: common.link.xacro
xarm_simple/xarm_description/urdf/suction_tube/: suction_tube.urdf.xacro  suction_tube_macro.xacro
xarm_simple/xarm_description/urdf/xarm6/: xarm6.gazebo.xacro  xarm6.urdf.xacro
xarm_simple/xarm_moveit_config/: CMakeLists.txt  package.xml
xarm_simple/xarm_moveit_config/launch/: _robot_moveit_common2.launch.py  _robot_moveit_gz.launch.py
xarm_simple/xarm_moveit_config/rviz/: moveit.rviz
xarm_simple/xarm_moveit_config/scripts/: gazebo_scene_to_moveit.py
xarm_simple/xarm_moveit_servo/config/: xarm_moveit_servo_config.yaml
xarm_simple/xarm_moveit_servo/launch/: _robot_moveit_servo_realmove.launch.py  xarm_moveit_servo_fake.launch.py  xarm_moveit_servo_realmove.launch.py
xarm_simple/xarm_planner/: CMakeLists.txt
(+2 files in other folders)
